<resources>
    <string name="app_name">SMVDU</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_acoount">Already Have Acoount</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="click_for_signup">Click For SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_12_00pm">12:00pm</string>
    <string name="chat_room">Chat Room</string>
    <string name="group_chat">Group Chat</string>
    <string name="coming_soon">COMING SOON</string>
</resources>